commented out the function for scraping rotten tomatoes to make the source code more readable/shorter

--- a/mod_1_project_austin.ipynb
+++ b/mod_1_project_austin.ipynb
@@ -111,8 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#uncomment and run this cell to scrape rotten tomatoes \n",
     "#create variable in order to make list of just the movie names\n",
-    "dict_ = find_values_range(2009,2018)"
+    "#dict_ = find_values_range(2009,2018)"
    ]
   },
   {
